--- a/_posts/2015-01-04-pixel-7a.md
+++ b/_posts/2015-01-04-pixel-7a.md
@@ -7,12 +7,45 @@ excerpt_image: /assets/images/pixel.jpg
 top: 1
 sidebar: []
 ---
+<style>
+      .container {
+        display: flex;
+        flex-wrap: wrap; 
+        /* Allows items to wrap */
+        flex-direction: row;
+        /* padding: 40px; */
+    }
 
-<div class="post-except" style="display:flex">
-<div style="flex: 0 0 65%;">
+    .box-left {
+        /* flex: 1 1 150px; Grow to fill available space */
+        flex: 0 0 65%;
+        min-width: 250px; /* Minimum width before wrapping */
+        max-width: 400px; /* Minimum width before wrapping */
+        /* border: 1px solid black;  */
+        /* Just for visibility */
+        margin: 10px; /* Spacing between boxes */
+        padding: 40px; /* Padding inside boxes */
+        box-sizing: border-box; /* Include padding and border in the width */
+    }
+    .box-right {
+        flex: 1 1 150px; 
+        /* Grow to fill available space */
+        /* flex: 1; */
+        min-width: 250px; /* Minimum width before wrapping */
+        max-width: 300px; /* Minimum width before wrapping */
+        /* border: 1px solid black;  */
+        /* Just for visibility */
+        margin: 10px; /* Spacing between boxes */
+        padding: 20px; /* Padding inside boxes */
+        box-sizing: border-box; /* Include padding and border in the width */
+    }
+</style>
+
+<div class="container">
+<div class="box-left">
 Recruited for an on-site studio shoot, I worked closely with managers, photographers, and art directors to ensure perfect shots and smooth asset transitions from set to post-production. Faced with a last-minute talent shortage, I stepped in as a hand model. As post-production manager, I oversaw retouching, coordinated with Industrial Design and Creative teams, and handled regional asset adaptation and delivery. <a href="https://store.google.com/product/pixel_7a?hl=en-US" target="_blank">Pixel 7A</a>
 </div>
-<div style="flex: 1;">
+<div class="box-right">
 <img src="/assets/images/pixel.jpg" alt="">
 <div>
 <div>
